@@ -1,5 +1,11 @@
 2005-09-15  Christian Persch  <chpe@cvs.gnome.org>
 
+	* embed/mozilla/GtkNSSDialog.cpp:
+
+	Don't focus the checkbox initially. Fixes bug #163371.
+
+2005-09-15  Christian Persch  <chpe@cvs.gnome.org>
+
 	* src/ephy-toolbar-editor.c: (ephy_toolbar_editor_construct):
 
 	Make Close the default button.
